--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
      
          <h2> Habits/Patterns </h2>
          <form>
-<form 
-  method="POST" 
-  action="https://script.google.com/macros/s/AKfycbxj6YFktxnSIKscJBCgU4MrjyLC66_McjHc1fAgUuoEKYvS-2t_d2OzC0li6Ecfi0Iw/exec"
->
+<form method="POST" action="https://script.google.com/macros/s/AKfycbxj6YFktxnSIKscJBCgU4MrjyLC66_McjHc1fAgUuoEKYvS-2t_d2OzC0li6Ecfi0Iw/exec">
   <input name="Email" type="email" placeholder="Email" required>
   <input name="Name" type="text" placeholder="Name" required>
   <button type="submit">Send</button>
